<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/button0"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_gravity="end"
        android:text="@string/button_Language" />

    <ListView
        android:id="@+id/countriesList"
        android:layout_width="match_parent"
        android:layout_height="380dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="195dp"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_Add" />

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_Activity" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_Remove" />
    </LinearLayout>

</LinearLayout>
