<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <TextView
        android:id="@+id/names_text"
        android:layout_width="match_parent"
        android:layout_height="21dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/names" />

    <TextView
        android:id="@+id/tips_text"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="5dp"
        android:text="@string/tips"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="30dp" />

    <TextView
        android:id="@+id/edits_text"
        android:layout_width="match_parent"
        android:layout_height="21dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="5dp"
        android:text="@string/editions" />
</LinearLayout>